--- a/src/main/java/com/shoptao/view/HoaDonReport_1_1.jrxml
+++ b/src/main/java/com/shoptao/view/HoaDonReport_1_1.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="26303fbe-14e8-4700-bd62-355649d18511">
 	<property name="ireport.zoom" value="1.7715610000000026"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="655"/>
+	<property name="ireport.x" value="106"/>
+	<property name="ireport.y" value="742"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -84,6 +84,8 @@ FROM
      KhachHang."hoten" AS KhachHang_hoten,
      KhachHang."sdt" AS KhachHang_sdt,
      KhachHang."diachi" AS KhachHang_diachi,
+     KhuyenMai."hinhthucgiamgia" AS KhuyenMai_hinhthucgiamgia,
+     KhuyenMai."giatri" AS KhuyenMai_giatri,
      HoaDon."giamgia" AS HoaDon_giamgia
 FROM
      "dbo"."HoaDon" HoaDon INNER JOIN "dbo"."HoaDonChiTiet" HoaDonChiTiet ON HoaDon."id" = HoaDonChiTiet."idhoadon"
@@ -91,6 +93,7 @@ FROM
      INNER JOIN "dbo"."MauSac" MauSac ON SanPham."idmausac" = MauSac."id"
      INNER JOIN "dbo"."NhanVien" NhanVien ON HoaDon."idnhanvien" = NhanVien."id"
      INNER JOIN "dbo"."KhachHang" KhachHang ON HoaDon."idkhachhang" = KhachHang."id"
+     INNER JOIN "dbo"."KhuyenMai" KhuyenMai ON HoaDon."idkhuyenmai" = KhuyenMai."id"
 WHERE
      HoaDon."ma" = $P{mahoadon}]]>
 	</queryString>
@@ -108,6 +111,8 @@ WHERE
 	<field name="KhachHang_hoten" class="java.lang.String"/>
 	<field name="KhachHang_sdt" class="java.lang.String"/>
 	<field name="KhachHang_diachi" class="java.lang.String"/>
+	<field name="KhuyenMai_hinhthucgiamgia" class="java.lang.Integer"/>
+	<field name="KhuyenMai_giatri" class="java.lang.Double"/>
 	<field name="HoaDon_giamgia" class="java.math.BigDecimal"/>
 	<background>
 		<band splitType="Stretch"/>
@@ -142,49 +147,49 @@ WHERE
 			<staticText>
 				<reportElement x="0" y="79" width="100" height="20" uuid="94aa9a10-5ccd-443c-9650-80706551da8a"/>
 				<textElement>
-					<font fontName="DejaVu Sans" size="13"/>
+					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
 				<text><![CDATA[Họ tên khách:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="99" width="100" height="20" uuid="855018dd-d65c-4dd4-9011-7c1479426e7b"/>
 				<textElement>
-					<font fontName="DejaVu Sans" size="13"/>
+					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
 				<text><![CDATA[Số điện thoại:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="119" width="100" height="20" uuid="a2bc0c0d-0585-4c1f-b176-cc2d2bb871f8"/>
 				<textElement>
-					<font fontName="DejaVu Sans" size="13"/>
+					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
 				<text><![CDATA[Địa chỉ:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="100" y="79" width="223" height="20" uuid="c79e8d96-a61e-4c4c-ac98-84345dd9a1a5"/>
+				<reportElement x="103" y="79" width="207" height="20" uuid="c79e8d96-a61e-4c4c-ac98-84345dd9a1a5"/>
 				<textElement>
-					<font fontName="DejaVu Sans" size="13"/>
+					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{KhachHang_hoten}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="100" y="119" width="310" height="20" uuid="ea4b079c-d65a-4d31-8f5a-26e4a9020060"/>
 				<textElement>
-					<font fontName="DejaVu Sans" size="13"/>
+					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{KhachHang_diachi}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="100" y="99" width="223" height="20" uuid="4c9c3039-ff06-4957-8d86-a828f9c72554"/>
 				<textElement>
-					<font fontName="DejaVu Sans" size="13"/>
+					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{KhachHang_sdt}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="339" y="79" width="216" height="20" uuid="2a92bdcb-98cc-49b7-905d-e5af7d477763"/>
 				<textElement textAlignment="Right">
-					<font fontName="DejaVu Sans" size="13"/>
+					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA["NVBH: " + $F{NhanVien_hoten}]]></textFieldExpression>
 			</textField>
@@ -202,28 +207,28 @@ WHERE
 	<columnHeader>
 		<band height="33" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="257" height="26" uuid="5a73d525-b61d-4d62-90d0-b2e59eda4789"/>
+				<reportElement x="0" y="0" width="271" height="26" uuid="5a73d525-b61d-4d62-90d0-b2e59eda4789"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tên sản phẩm]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="363" y="1" width="78" height="26" uuid="5a7a8511-af3b-4606-99b0-0966c55f880c"/>
+				<reportElement x="362" y="0" width="78" height="26" uuid="5a7a8511-af3b-4606-99b0-0966c55f880c"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Số lượng]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="257" y="0" width="106" height="26" uuid="cb8ba5c9-c0be-4d88-a4a9-1eac50520994"/>
+				<reportElement x="247" y="0" width="106" height="26" uuid="cb8ba5c9-c0be-4d88-a4a9-1eac50520994"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Đơn giá]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="441" y="0" width="114" height="26" uuid="4ad4466a-b2f1-46d1-8681-53af704e5728"/>
+				<reportElement x="443" y="1" width="100" height="26" uuid="4ad4466a-b2f1-46d1-8681-53af704e5728"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="14" isBold="true"/>
 				</textElement>
@@ -238,33 +243,33 @@ WHERE
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="37" splitType="Stretch">
+		<band height="32" splitType="Stretch">
 			<line>
 				<reportElement x="0" y="25" width="555" height="1" uuid="346ec231-aea4-44d9-847e-475f0bc95472"/>
 			</line>
 			<textField>
-				<reportElement x="17" y="0" width="240" height="20" uuid="9b1ec19b-4d93-446e-80ea-a3afa03df8d0"/>
+				<reportElement x="17" y="0" width="230" height="20" uuid="9b1ec19b-4d93-446e-80ea-a3afa03df8d0"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{SanPham_ten} + " (" + $F{SanPham_dungluong} + " - " + $F{MauSac_ten} + ")"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="257" y="0" width="106" height="20" uuid="78139724-eceb-4064-9c3e-620dacca2171"/>
+				<reportElement x="247" y="0" width="106" height="20" uuid="78139724-eceb-4064-9c3e-620dacca2171"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDonChiTiet_dongia}.doubleValue()).toString() + " VND"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="379" y="0" width="44" height="20" uuid="6fbe4320-b9cc-41bb-b184-22cfc29d5b7b"/>
+				<reportElement x="377" y="0" width="44" height="20" uuid="6fbe4320-b9cc-41bb-b184-22cfc29d5b7b"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{HoaDonChiTiet_soluong}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="441" y="0" width="114" height="20" uuid="9915f000-d9e1-450a-a39b-e14a3ec7427b"/>
+				<reportElement x="455" y="0" width="88" height="20" uuid="9915f000-d9e1-450a-a39b-e14a3ec7427b"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="12"/>
 				</textElement>
@@ -273,83 +278,83 @@ WHERE
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="165" splitType="Stretch">
-			<textField>
-				<reportElement x="424" y="115" width="113" height="24" uuid="dbcb2027-262f-4671-bd8b-949aa7cbe124"/>
-				<textElement textAlignment="Right">
-					<font fontName="DejaVu Sans" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tienkhachdua}.doubleValue()).toString() + " VND"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="424" y="43" width="113" height="24" uuid="75a41322-5cb4-4fba-b26c-fb2f586badd7"/>
-				<textElement textAlignment="Right">
-					<font fontName="DejaVu Sans" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tongtien}.doubleValue()).toString() + " VND"]]></textFieldExpression>
-			</textField>
+		<band height="205" splitType="Stretch">
 			<staticText>
-				<reportElement x="324" y="67" width="86" height="24" uuid="17092a53-8f0a-4d89-b13c-47bf83de0c3c"/>
-				<textElement>
-					<font fontName="DejaVu Sans" size="12"/>
-				</textElement>
-				<text><![CDATA[Giảm giá:]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="424" y="139" width="113" height="24" uuid="e1f4a7d3-3050-47a6-a164-7dd8c9ae9c21"/>
-				<textElement textAlignment="Right">
-					<font fontName="DejaVu Sans" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tienkhachdua}.doubleValue() - ($F{HoaDon_tongtien}.doubleValue() - $F{HoaDon_giamgia}.doubleValue())).toString() + " VND"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="424" y="91" width="113" height="24" uuid="846a2caa-a6cf-425a-bfde-3cded2161310"/>
-				<textElement textAlignment="Right">
-					<font fontName="DejaVu Sans" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tongtien}.subtract($F{HoaDon_giamgia})).toString() + " VND"]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="324" y="139" width="86" height="24" uuid="6b6fa1ef-086a-4e35-b09f-df5a232e778d"/>
-				<textElement>
-					<font fontName="DejaVu Sans" size="12"/>
-				</textElement>
-				<text><![CDATA[Tiền thừa:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="324" y="91" width="86" height="24" uuid="83e855a3-19ca-4c88-bcd7-e7341fbdd319"/>
-				<textElement>
-					<font fontName="DejaVu Sans" size="12"/>
-				</textElement>
-				<text><![CDATA[Thanh toán:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="324" y="43" width="86" height="24" uuid="88aa5807-9c16-4432-98ca-24f80003a95c"/>
+				<reportElement x="310" y="0" width="86" height="24" uuid="5a2b96fc-d85c-4f4e-bdbe-79b6498410ef"/>
 				<textElement>
 					<font fontName="DejaVu Sans" size="12"/>
 				</textElement>
 				<text><![CDATA[Tổng tiền:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="424" y="67" width="113" height="24" uuid="065f45e5-c86d-4665-b268-c83cd62b7afe"/>
+				<reportElement x="410" y="0" width="113" height="24" uuid="69c1f5cc-45ad-4409-8291-d7cf5581a866"/>
+				<textElement textAlignment="Right">
+					<font fontName="DejaVu Sans" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tongtien}.doubleValue()).toString() + " VND"]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="310" y="24" width="86" height="24" uuid="955c6a8c-bb21-4202-97d5-808043ac9134"/>
+				<textElement>
+					<font fontName="DejaVu Sans" size="12"/>
+				</textElement>
+				<text><![CDATA[Giảm giá:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="410" y="24" width="113" height="24" uuid="9787b79c-516c-4186-8d92-1a9e2e28a92e"/>
 				<textElement textAlignment="Right">
 					<font fontName="DejaVu Sans" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_giamgia}).toString() + " VND"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="324" y="115" width="100" height="24" uuid="be425357-b405-4462-957d-ea182b55803a"/>
+				<reportElement x="310" y="48" width="86" height="24" uuid="b0176e09-1c81-495e-921a-0f3a4c5555f7"/>
+				<textElement>
+					<font fontName="DejaVu Sans" size="12"/>
+				</textElement>
+				<text><![CDATA[Thanh toán:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="410" y="48" width="113" height="24" uuid="377031a3-c1b3-469b-8e6a-63719187da94"/>
+				<textElement textAlignment="Right">
+					<font fontName="DejaVu Sans" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tongtien}.subtract($F{HoaDon_giamgia})).toString() + " VND"]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="310" y="72" width="100" height="24" uuid="5516be96-e038-4011-93e4-96440ebb0987"/>
 				<textElement>
 					<font fontName="DejaVu Sans" size="12"/>
 				</textElement>
 				<text><![CDATA[Tiền khách đưa:]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="410" y="72" width="113" height="24" uuid="5d798d2d-ad13-4f08-9027-776ac4dc961a"/>
+				<textElement textAlignment="Right">
+					<font fontName="DejaVu Sans" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tienkhachdua}.doubleValue()).toString() + " VND"]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="310" y="96" width="86" height="24" uuid="6b701f97-d59e-48c5-bd4c-0e0ffaed853b"/>
+				<textElement>
+					<font fontName="DejaVu Sans" size="12"/>
+				</textElement>
+				<text><![CDATA[Tiền thừa:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="410" y="96" width="113" height="24" uuid="0a935a58-de20-4e2e-a1bf-5b195ac9f3d3"/>
+				<textElement textAlignment="Right">
+					<font fontName="DejaVu Sans" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tienkhachdua}.doubleValue() - ($F{HoaDon_tongtien}.doubleValue() - $F{HoaDon_giamgia}.doubleValue())).toString() + " VND"]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnFooter>
 	<pageFooter>
-		<band height="290" splitType="Stretch"/>
+		<band height="325" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="34" splitType="Stretch"/>
+		<band height="98" splitType="Stretch"/>
 	</summary>
 </jasperReport>
