--- a/src/main/java/com/shoptao/view/NhanVienPanel.form
+++ b/src/main/java/com/shoptao/view/NhanVienPanel.form
@@ -161,7 +161,7 @@
                       </Group>
                       <Component id="jScrollPane1" min="-2" pref="1507" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="27" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
